# CarConnectivity-connector-skoda

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup_requirements.txt
.github/workflows/: build_and_publish.yml
doc/: Config.md
src/carconnectivity_connectors/skoda/: capability.py  charging.py  climatization.py  command_impl.py  connector.py  error.py  mqtt_client.py  vehicle.py
src/carconnectivity_connectors/skoda/auth/: auth_util.py  my_skoda_session.py  my_skoda_session2.py  openid_session.py  session_manager.py  skoda_web_session.py
src/carconnectivity_connectors/skoda/services/: skoda_location_service.py
src/carconnectivity_connectors/skoda/ui/: connector_ui.py
src/carconnectivity_connectors/skoda/ui/templates/skoda/: status.html
test/integration_test/: carConnectivity.json
