[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools_scm>=8"
]
build-backend = "setuptools.build_meta"

[project]
name = "carconnectivity-connector-skoda"
description = "CarConnectivity connector for Skoda services"
dynamic = ["version"]
requires-python = ">=3.8"
authors = [
    { name = "Till Steinbach" }
]
dependencies = [
    "carconnectivity>=0.5a4",
    "oauthlib~=3.2.2",
    "requests~=2.32.3",
    "jwt~=1.3.1",
    "paho-mqtt~=2.1.0",
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries"
]

[project.urls]

[tool.setuptools_scm]
write_to = "src/carconnectivity_connectors/skoda/_version.py"

[tool.pylint.format]
max-line-length = 160
ignore-patterns= "_version.py"

[tool.bandit]
targets = "carconnectivity_cli"